fixed borders, aligned answer number and removed fixed hight

--- a/styles.css
+++ b/styles.css
@@ -93,14 +93,14 @@ ul {
 }
 
 .calculator {
-  width: 40440044px;
-  height: 600px;
+  width: 406px;
   background-color: #000000;
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
   font-family: Arial, Helvetica, sans-serif;
   font-size: 40px;
+  border: 3px solid #000000;
 }
 
 .calc-row {
@@ -111,11 +111,9 @@ ul {
 
 .answer-number {
   margin: 0px;
-  display: flex;
-  align-items: center;
+  text-align: right;
   font-family: "Courier New", Courier, monospace;
   color: #ffefd5;
-  width: 90%;
-  height: 99%;
-  justify-content: flex-end;
+  line-height: 100px;
+  padding-right: 20px;
 }
